# actix-demo

./: .gitignore  Cargo.toml  Makefile  package-lock.json  package.json
config/: default.toml  development.toml
src/: lib.rs  main.rs  settings.rs
src/controllers/: user.rs
src/errors/: mod.rs
src/routes/: user.rs
src/utils/: logger.rs  mod.rs  settings.rs  wrapper.rs
