[package]
name = "demo"
version = "0.1.0"
authors = ["dreambo8563 <dreambo8563@outlook.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3"
futures = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
listenfd = "0.3"
log = "0.4.0"
env_logger = "0.8.1"
derive_more = "0.99.11"
config = "0.10"
lazy_static = "1.4.0"
slog = "2.5.2"
slog-bunyan = "2.2.0"
slog-term = "2.6.0"
slog-async = "2.5.0"


